-- =============================================================================
-- PoC #02 — DB 통합 스키마 (Phase 2 산출)
-- =============================================================================
-- 생성일: 2026-04-29
-- 출처: module/persistence/src/main/resources/schema.sql (HEAD 93e018e)
-- 스택: Spring Boot 3.3.0 / Hibernate 6 / Jakarta Persistence 3.x / H2 (in-memory MODE=MYSQL)
-- 통합 우선순위: ORM 단일 (DEC-PHASE2-POC02-001)
--
-- ★ 출처 의존성 caveat ★
-- 본 schema.sql 은 Hibernate `NamingHelper.generateHashedFkName` 자동 생성 결과의
-- 캡쳐본임이 확정 (FK/UQ 제약명 100% MD5 hash 패턴 — 예: fkmjgtny2i22jf4dqncmd436s0u).
-- 즉 DDL = ORM derivative. 정합성 검증 의미 약화 — 정합성-검증-보고서.md caveat 참조.
--
-- DRIFT 0건 (출처 1종 — 비교 대상 부재).
-- 단 사내 적용 시 즉시 수정 권고:
--   F-048 critical — TagJpaRepository<Tag, Integer> 타입 오류 (Tag PK 가 String)
--   F-052 high — article.title varchar(50) unique over-constraint (Medium/Velog/Brunch 미사용 패턴)
--   F-051 high — Article.articleTags EAGER + Specification + Pageable HHH000104 위험
--   F-054 medium — users.email varchar(30) RFC 5321 위반
-- =============================================================================

create table users
(
    created_at timestamp(6) not null,
    id         uuid         not null,                  -- Hibernate 6 GenerationType.UUID (Jakarta 3.1 신규 표준)
    email      varchar(30)  not null unique,           -- F-054 RFC 5321 위반 (권장 254/320)
    username   varchar(30)  not null unique,           -- F-055 한국어 환경 부족
    image_url  varchar(200),                            -- URL 길이 부족 (CDN URL 환경 권장 2048)
    password   varchar(200) not null,                  -- BCrypt 60 / Argon2 도입 시 부족 (F-056)
    bio        varchar(500),
    primary key (id)
);

create table article
(
    id          integer generated by default as identity,
    created_at  timestamp(6)  not null,
    updated_at  timestamp(6),
    author_id   uuid          not null,                -- F-057 PK FK 타입 혼재 (UUID + Integer)
    description varchar(50)   not null,                -- F-055 한국어 50자 부족
    slug        varchar(50)   not null unique,         -- RealWorld spec 정합 (URL 식별자)
    title       varchar(50)   not null unique,         -- F-052 over-constraint anti-pattern ★
    content     varchar(1000) not null,
    primary key (id)
);

create table article_favorite
(
    article_id integer,
    id         integer generated by default as identity,
    created_at timestamp(6) not null,
    user_id    uuid,
    primary key (id),
    constraint ukpatixq7onikvvq0vw8cg039fu unique (user_id, article_id)
);

create table article_tag
(
    article_id integer,
    id         integer generated by default as identity,
    created_at timestamp(6) not null,
    tag_name   varchar(20),
    primary key (id),
    constraint uk6mf7aqqemxogkbdi5j1407ehg unique (article_id, tag_name)
);

create table article_comment
(
    article_id integer      not null,
    id         integer generated by default as identity,
    created_at timestamp(6) not null,
    author_id  uuid         not null,
    content    varchar(500) not null,
    primary key (id)
);

create table tag
(
    created_at timestamp(6) not null,
    name       varchar(20)  not null,                  -- 자연키 PK (의도적 단순화)
    primary key (name)
);

create table user_follow
(
    id           integer generated by default as identity,
    created_at   timestamp(6) not null,
    follower_id  uuid,
    following_id uuid,
    primary key (id),
    constraint ukp8vhuhxu2u1fm8qg7hvn4y1gs unique (follower_id, following_id)
);

-- ============================================================================
-- Foreign Key Constraints (9개)
-- ============================================================================
-- ★ 모두 ON DELETE / ON UPDATE 미명시 = H2 default NO ACTION (실질 RESTRICT)
-- DRIFT-007 (PoC #01) 재현 — stack-conditional caveat (H2 in-memory 환경)
-- 운영 환경 가정 시 ON DELETE 정책 명시 필요
-- ============================================================================

alter table if exists article
    add constraint fkmjgtny2i22jf4dqncmd436s0u foreign key (author_id) references users;

alter table if exists article_favorite
    add constraint fkb8vit5sr2sivwocuy4qxatn8c foreign key (article_id) references article;

alter table if exists article_favorite
    add constraint fk8m1q6r31lmkejfp8l8eka6n93 foreign key (user_id) references users;

alter table if exists article_tag
    add constraint fkenqeees0y8hkm7x1p1ittuuye foreign key (article_id) references article;

alter table if exists article_tag
    add constraint fk27dk3xr3kdb606oobk5yn7m1c foreign key (tag_name) references tag;

alter table if exists article_comment
    add constraint fkghmocqkgqs5tkmucf5putw64t foreign key (article_id) references article;

alter table if exists article_comment
    add constraint fkr6n3iwt28icgmsn2bnargxqd1 foreign key (author_id) references users;

alter table if exists user_follow
    add constraint fki9gqdjcgtclgypxp2krye61n7 foreign key (follower_id) references users;

alter table if exists user_follow
    add constraint fk474orxbed564dk0mvggvt4xon foreign key (following_id) references users;
